--- a/wiki/AnotacionesJuanma.wiki
+++ b/wiki/AnotacionesJuanma.wiki
@@ -1,6 +1,6 @@
-#summary One-sentence summary of this page.
+#summary Cuestiones surgidas durante la migración
 
 = Anotaciones Juanma =
 
-Esta p√°gina contiene todo tipo de cuestiones surgidas durante el proceso de migraci√≥n.
+Esta página contiene todo tipo de cuestiones surgidas durante el proceso de migración.
 
