--- a/wiki/AnotacionesJuanma.wiki
+++ b/wiki/AnotacionesJuanma.wiki
@@ -4,4 +4,5 @@
 
 Esta página contiene todo tipo de cuestiones surgidas durante el proceso de migración.
 
-  
+  Clase book
+  metodo getPreviousPagePoint ?
