--- a/branches/EADAndroidEngine_1/res/values/strings.xml
+++ b/branches/EADAndroidEngine_1/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="no_sd">No SD Card found</string>
+    <string name="no_sd">No SDCard found</string>
     <string name="app_name">&lt;e-Ad&gt; mobile</string>
 
 
@@ -11,4 +11,5 @@
 
 <string name="no_games">No games installed</string>
 
+<string name="no_saved_games">No saved games</string>
 </resources>
