--- a/trunk/EAdMobileEngine/res/values/strings.xml
+++ b/trunk/EAdMobileEngine/res/values/strings.xml
@@ -2,14 +2,8 @@
 <resources>
     <string name="no_sd">No SDCard found</string>
     <string name="app_name">eAdventure Mobile</string>
-
-
-
-
-
-<string name="no_connection">No internet connection</string>
-
-<string name="no_games">No games installed</string>
-
-<string name="no_saved_games">No saved games</string>
+	<string name="no_connection">No internet connection</string>
+	<string name="no_games">No games installed</string>
+	<string name="no_saved_games">No saved games</string>
+    <string name="actionbar_activity_not_found">Failed to open intent...</string>
 </resources>
